[project]
name = "comfyui_ino_nodes"
description = "A comprehensive collection of custom nodes for ComfyUI that provides advanced file handling, S3 cloud storage integration, LoRA configuration management, and various utility functions."
version = "1.1.4"
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["inocloudreve", "inopyutils", "numpy", "Pillow", "torch"]
keywords = ["comfyui", "custom-nodes", "s3", "cloudreve", "lora", "file-handling", "utilities"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Repository = "https://github.com/nobandegani/comfyui_ino_nodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "inoland"
DisplayName = "ComfyUI Ino Nodes"
Icon = ""
