[project]
name = "ComfyUI-InoNodes"
description = "125+ production-ready V3 custom nodes for ComfyUI covering file ops, S3 cloud storage, image/video/audio processing, model management (HuggingFace/Civitai/S3), OpenAI & Runpod integration, and workflow utilities."
version = "2.0.1"
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["inopyutils", "openai", "huggingface_hub", "hf_xet"]
keywords = ["comfyui", "custom-nodes", "s3", "cloudreve", "lora", "file-handling", "utilities"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Repository = "https://github.com/nobandegani/ComfyUI-InoNodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "inoland"
DisplayName = "ComfyUI Ino Nodes"
Icon = ""
